Fix: 모달창 내부 입력 안되고 누르면 꺼지는것 수정. (모달창 z-index 오버레이보다 높게 고침)

--- a/src/0_presentation/components/lobby/CreateRoomModal.css
+++ b/src/0_presentation/components/lobby/CreateRoomModal.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 100;
+  z-index: 101;
 }
 
 /* modal창 */
@@ -22,4 +22,5 @@
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
   box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
+  z-index: 102;
 }
